--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,14 @@
-/* style */
+.index-body {
+	font-family: 'Bebas Neue', 'Arial', sans-serif;
+}
+
+@font-face {
+	font-family: 'Bebas Neue';
+	src:
+		local('Bebas Neue Regular'), local('BebasNeueRegular'),
+		url('../fonts/bebasneueregular.woff2') format('woff2'),
+		url('../fonts/bebasneueregular.woff') format('woff'),
+		url('../fonts/bebasneueregular.ttf') format('truetype');
+	font-weight: 400;
+	font-style: normal;
+}
