--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,10 @@
 	border: 1px solid #e1e1e1;
 }
 
+.search-form:hover {
+	border-color: #000000;
+}
+
 .search-button {
 	box-sizing: border-box;
 	width: 40px;
@@ -52,6 +56,12 @@
 
 	background: #ffffff url('../img/icon-search.svg') center center no-repeat;
 	border: none;
+
+	cursor: pointer;
+}
+
+.search-button:hover {
+	opacity: 0.5;
 }
 
 .main-search {
@@ -59,11 +69,46 @@
 	width: 394px;
 	height: 31px;
 	margin: 0;
-	padding: 0;
+	padding: 0 10px;
 
 	font: inherit;
 
 	border: none;
+}
+
+.main-search:focus {
+	background-color: #61efe4;
+	outline: none;
+}
+
+.main-search:focus + .search-button {
+	background-color: #61efe4;
+}
+
+.link-to-cart {
+	position: relative;	
+
+	display: inline-block;
+	width: 41px;
+	height: 37px;
+	margin-right: 20px;
+	vertical-align: middle;
+	
+	background-image: url("../img/icon-cart.svg");
+
+	transition: 0.2s ease-in;
+}
+
+.link-to-cart:hover {
+	border-bottom: 6px solid #3cc3b5;
+
+	transform: scale(1.1);	
+}
+
+.link-to-cart:active {
+	opacity: 0.5;
+
+	transition: none;
 }
 
 .price-in-cart {
@@ -76,16 +121,6 @@
 	font-size: 33px;
 	line-height: 19px;
 	color: #a1a1a1;
-}
-
-.price-in-cart::before {
-	content: url("../img/icon-cart.svg");
-	position: absolute;
-	top: -8px;
-	left: -58px;
-
-	width: 41px;
-	height: 37px;
 }
 
 .site-navigation-bg {
@@ -144,6 +179,14 @@
 	text-decoration: none;
 }
 
+.site-navigation-link:hover {
+	text-decoration: underline;
+}
+
+.site-navigation-link:active {
+	color: #e8e4e4;
+}
+
 .index-main {
 	background-color: #3dc0b4;
 	background-image: url('../img/background.jpg');
@@ -197,6 +240,16 @@
 	border-radius: 7px;
 }
 
+.promo-slider-slide-button:hover {
+	color: #3cc8b1;
+
+	background-color: #ffffff;
+}
+
+.promo-slider-slide-button:active {
+	opacity: 0.5;
+}
+
 .promo-slider-slide img {
 	margin: 0 100px 0 67px;
 	width: 278px;
@@ -207,15 +260,17 @@
 	display: flex;
 }
 
+.promo-shop-bg {
+	background-color: #ffffff;
+	box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.13)
+}
+
 .promo-shop-slider-container {
 	position: relative;
 
+	padding: 0 10px;
 	margin: 0 auto;
-	width: 1280px;
-
-	background-color: #ffffff;
-
-	box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.13)
+	width: 1004px;	
 }
 
 .promo-shop-slides {
@@ -262,6 +317,14 @@
 
 	background-color: #3cc395;
 	border-radius: 5px;
+}
+
+.promo-shop-slide-button:hover {
+	background-color: #359e7a;
+}
+
+.promo-shop-slide-button:active {
+	opacity: 0.5;
 }
 
 .products-main-title {
@@ -312,6 +375,10 @@
 		0 4px 0 0 #3cc395;
 }
 
+.products-item:hover {
+	box-shadow: 0 0 0 4px #3cc395;
+}
+
 .products-item img {
 	width: 190px;
 	height: 130px;
@@ -350,6 +417,14 @@
 	border-radius: 5px;
 }
 
+.products-item-button:hover {
+	background-color: #359e7a;
+}
+
+.products-item-button:active {
+	opacity: 0.5;
+}
+
 .main-footer {
 	background-color: #3cc3b5;
 	box-shadow: inset 0 -46px 0 0 #2da89b;
@@ -369,6 +444,8 @@
 }
 
 .footer-navigation-link {
+	position: relative;
+
 	display: block;
 	margin-bottom: 23px;
 
@@ -376,6 +453,31 @@
 	line-height: 25px;
 	color: #ffffff;
 	text-decoration: none;
+}
+
+.footer-navigation-link:hover {
+	color: #efebeb;
+}
+
+.footer-navigation-link:active {
+	color: #d2d0d0;
+}
+
+.footer-navigation-link::before {
+	content: '';
+
+	position: absolute;
+	left: -15px;
+
+	display: none;
+	width: 2px;
+	height: 25px;
+
+	background-color: #efebeb;
+}
+
+.footer-navigation-link:hover::before {
+	display: block;
 }
 
 .footer-navigation-2nd-nesting {
@@ -394,6 +496,14 @@
 .footer-navigation-2nd-nesting-item a {
 	color: #ffffff;
 	text-decoration: none;
+}
+
+.footer-navigation-2nd-nesting-item a:hover {
+	text-decoration: underline;
+}
+
+.footer-navigation-2nd-nesting-item a:active {
+	color: #d2d0d0;
 }
 
 .visually-hidden {
